# mangaverse-api

./: .env.sample  .gitignore  Cargo.toml  README.md  Rocket.toml
.cargo/: config.toml.sample
resources/: schema.sql
src/: main.rs  routes.rs
src/db/: author.rs  chapter.rs  genre.rs  manga.rs  mod.rs  page.rs  pattern.rs  query.rs  source.rs
src/entities/: account.rs  author.rs  chapter.rs  chapter_page.rs  genre.rs  linkage_correction.rs  manga.rs  manga_artist.rs  manga_author.rs  manga_genre.rs  manga_listing.rs  mod.rs  prelude.rs  problem_child.rs  source.rs  source_pattern.rs  title.rs
src/models/: author.rs  chapter.rs  genre.rs  manga.rs  mod.rs  page.rs  pattern.rs  query.rs  source.rs
