[package]
name = "mangaverse-api"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sqlx]
version = "0.5.13"
features = ["chrono", "macros"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_mysql"]

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid", "tls"]}
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
async-trait = "0.1.57"
mangaverse-entity = {git = "https://github.com/fa993/mangaverse-entity", rev = "817487c"}
mangaverse-sources = {git = "https://github.com/fa993/mangaverse-sources", rev = "f317416"}